samples/_failures_safe/1761095479_482787_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5766b9ae.c: In function ‘main’:
./samples/SAFE/__tmp_5766b9ae.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
